--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
     # Información del proyecto
-    sonar.projectKey=co.com.ceiba.adn:lavadoralfombra-milton.paredes
-    sonar.projectName=CeibaADN-lavadoralfombra(milton.paredes)
+    sonar.projectKey=co.com.ceiba.adn.front:lavadoralfombra-milton.paredes
+    sonar.projectName=CeibaADN-lavadorFrontalfombra(milton.paredes)
     sonar.sourceEncoding=UTF-8
     sonar.sources=src/app
     sonar.exclusions=*/node_modules/**,**/*.spec.ts,**/*.directive.ts,**/*-error.ts,**/*.util.ts
