--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,7 @@
     # Información del proyecto
     sonar.projectKey=co.com.ceiba.adn:lavadoralfombraFront-milton.paredes
     sonar.projectName=CeibaADN-lavadoralfombraFront(milton.paredes)
+    sonar.projectVersion=1.0
     sonar.sourceEncoding=UTF-8
     sonar.sources=src/app
     sonar.exclusions=*/node_modules/**,**/*.spec.ts,**/*.directive.ts,**/*-error.ts,**/*.util.ts
